# HShop

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  db.sqlite3  db_router.py  docker-compose.yml  manage.py  pyproject.toml
app/: admin.py  asgi.py  celery.py  models.py  redirects.py  urls.py  wsgi.py
app/admin/: __init__.py  choice_admin.py  question_admin.py
app/admins/: choice_admin.py  client_user_admin.py
app/migrations/: 0001_initial.py  0002_clientuser_name.py  0002_clientuser_userrefreshtoken.py  0003_alter_clientuser_password.py
app/models/: __init__.py  choice.py
app/settings/: base.py  dev.py  prod.py  test.py
app/tasks/: email.py
app/utils/: __init__.py  custom_authentication.py  error_definition.py  response_request.py  response_schema.py  verify_password.py
app/views/: polls_views.py  redirects.py  views.py
askservice/: apps.py  urls.py  views.py
askservice/serializers/: __init__.py  group_serializer.py
askservice/views/: __init__.py  group.py  hello.py  user.py
databases/: -- SQLite.sql
dev/: test_polls_app.ipynb
mysite/: settings.py  urls.py
mysite/settings/: __init__.py  base.py  db_router.py  dev.py  prod.py
polls/: models.py  urls.py  views.py
polls/admin/: __init__.py  choice_admin.py  question_admin.py
polls/migrations/: 0001_initial.py
polls/models/: choice.py  question.py
polls/tests/: test_detail.py  test_index.py
polls_test/: test.py  test_detail.py  test_index.py
scripts/: dev_script.sql
static/jupyter_notebook/: Untitled.ipynb  test_polls_app.ipynb
templates/polls/: index.html  question_detail.html  results.html
tests/: test_index.py  utils.py
(+22 files in other folders)
