[tool.poetry]
name = "mysite"
version = "0.1.0"
description = ""
authors = ["DucHoang-UIT <hoangduc.uit.dev@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.1.1"
notebook = "6.5.6"
django-extensions = "^3.2.3"
django-debug-toolbar = "^4.4.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
